End of day. Modified gear rotation loop and table update.

--- a/gears.html
+++ b/gears.html
@@ -24,8 +24,10 @@
 			<p>We know the answer - let's train our network!</p>
 			<p>How the network calculates outputs - simple video</p>
 			<p>Imagine we have a magic box. When you feed the box some numbers, it spits out another number.</p>
-			<p>Add number to table on each click.</p>
-			<p>Add graphics to animate the process</p>
+			<!-- <p>Add number to table on each click.</p> -->
+			<p>Add numbers to each box</p>
+			<p>Move each box when gears are clicked</p>
+			<p>Add output box when gears stop rotating</p>
 		
 		</div></div>
 		<div id="NetworkGraph"></div>
