Added block animation - zooming around on clicks

--- a/gears.html
+++ b/gears.html
@@ -24,9 +24,9 @@
 			<p>How the network calculates outputs - simple video</p>
 			<p>Imagine we have a magic box. When you feed the box some numbers, it spits out another number.</p>
 			<!-- <p>Add number to table on each click.</p> -->
-			<p>Add numbers to each box</p>
-			<p>Move each box when gears are clicked</p>
-			<p>Add output box when gears stop rotating</p>
+			<!-- <p>Add numbers to each box</p> -->
+			<!-- <p>Move each box when gears are clicked</p> -->
+			<!-- <p>Add output box when gears stop rotating</p> -->
 		
 		</div></div>
 		<div id="NetworkGraph"></div>
@@ -60,7 +60,7 @@
 			];
 			
 			//SVG drawing size
-			var wd = 400;
+			var wd = 500;
 			var ht = 400;
 			
 			//Size of black box
@@ -84,7 +84,7 @@
 		<script src="./setupNeuralNetwork.js"></script>
 		<script src="./setupInputBlocks.js"></script>
 		<script src="./setupGears.js"></script>
-		<script src="./setupTable.js"></script>
+		<!-- <script src="./setupTable.js"></script> -->
 		<script src="./setupSliders.js"></script>
 	</body>
 	
