Made doctor robot SVG

--- a/doctor.html
+++ b/doctor.html
@@ -17,17 +17,10 @@
 		
 		<div class="container"> 
 		<div class = "row"> <div class="col-md-6 col-md-offset-3">
-			<h2>Hello! This is an neural network test</h2>
-			
-			<p>Separate explanations for: </p>
-			<p>We know the answer - let's train our network!</p>
-			<p>How the network calculates outputs - simple video</p>
-			<p>Imagine we have a magic box. When you feed the box some numbers, it spits out another number.</p>
-			<!-- <p>Add number to table on each click.</p> -->
-			<!-- <p>Add numbers to each box</p> -->
-			<!-- <p>Move each box when gears are clicked</p> -->
-			<!-- <p>Add output box when gears stop rotating</p> -->
-		
+			<h2>Hello!</h2>
+
+			<p>This code shows how we collect our training data set.</p>
+			<p></p>
 		</div></div>
 		<div id="NetworkGraph"></div>
 		<div id="TableOut"></div>
