--- a/index.html
+++ b/index.html
@@ -23,26 +23,10 @@
 		<script src="./d3.slider.js"></script>
 		<script src="./d3.rebind.js"></script>
 		<script src="./tableFunctions.js"></script>
+		<script src="./neuralNetworkFunctions.js"></script>
 		
 		<script>
 			//Inputs and configuration
-													
-			
-			
-			
-			//Data for Neural network
-			var myData = [
-			{"id": 0, "T": 2.781083600, "HR":  2.550537003, "S_true":  0, "y_pred":  0},
-			{"id": 1, "T": 1.465489372, "HR":  2.362125076, "S_true":  0, "y_pred":  0},
-			{"id": 2, "T": 3.396561688, "HR":  4.400293529, "S_true":  0, "y_pred":  0},
-			{"id": 3, "T": 1.388070190, "HR":  1.850220317, "S_true":  0, "y_pred":  0},
-			{"id": 4, "T": 3.064072320, "HR":  3.005305973, "S_true":  0, "y_pred":  0},
-			{"id": 5, "T": 7.627531214, "HR":  2.759262235, "S_true":  1, "y_pred":  0},
-			{"id": 6, "T": 5.332441248, "HR":  2.088626775, "S_true":  1, "y_pred":  0},
-			{"id": 7, "T": 6.922596716, "HR":  1.771063670, "S_true":  1, "y_pred":  0},
-			{"id": 8, "T": 8.675418651, "HR": -0.242068655, "S_true":  1, "y_pred":  0},
-			{"id": 9, "T": 7.673756466, "HR":  3.508563011, "S_true":  1, "y_pred":  0},			
-			];
 			
 			
 			//SVG drawing size
@@ -87,65 +71,79 @@
 			<br>
 			
 			<h3>WHAT IS AN ARTIFICIAL NEURAL NETWORK? </h3>
-			<p>So what exactly is an artificial neural network? At its most basic level, an artificial neural network is a mathematical equation. For example, an artificial neural network could take a picture as an input, process the picture, and recognize faces in it.</p>
-			<p>Surprisingly, artificial neural networks rely on simple mathematics. Despite their cutting-edge applications, artificial neural networks typically only perform elementary calculations: addition, subtraction, multiplication, and exponentiation. In fact, you can easily replicate the same calculations with a simple calculator and these four buttons:   +   -   x   exp()</p>  
-			<p>What makes neural networks so special is in the way the calculations are performed. All that needs to be done is combine these operations in the right order.</p>
+			<p>So what exactly is an artificial neural network? At its most basic level, an artificial neural network is a mathematical equation. And, surprisingly, artificial neural networks rely on simple mathematics; despite their cutting-edge applications, artificial neural networks typically only perform addition, subtraction, multiplication, and exponentiation. In fact, you can easily replicate the same calculations with a simple calculator and these four buttons:   +   -   x   exp()</p>  
+			<p>What makes neural networks so special is in the way the calculations are performed. When these operations are combined in the right order, we can get computer to recognize your voice.</p>
 			<br>
 
 			<h3>AN EXAMPLE NEURAL NETWORK</h3>
 			<p>To better illustrate what an artificial neural network is, and how it works, let's walk through a simple example.</p> 
-			<p>Imagine that we are creating a medical robot (href = Big Hero 6!). The robot is supposed to measure a patient's heart rate and core temperature, and use that information to recognize when people are sick.  And just like other cutting-edge technologies, this robot will use a neural network to recognize sick patients.</p>
-			<p>Let's start by looking directly at the artificial neural network. Click any of the terms to get an explanation.</p>
+			<p>Imagine that we are creating a medical robot (href = Big Hero 6!). The robot is supposed to measure a patient's heart rate and core temperature, and use that information to recognize when people are sick.  And just like Alexa, this robot will use a neural network to recognize sick patients.</p>
+			<p>Our example neural network is below. Click any of the terms to get an explanation.</p>
 			<div id='ANN_Equation'>
 				<p>[THIS SHOULD HAVE INTERACTIVE HOVER-OVER AND CLICKABLE BEHAVIOR IN THE FINAL ARTICLE]</p> 
 				<p>\[ \Large{ S_{pred} = \frac{1}{1+e^{ - \left(\frac{w_5 }{1 + e^{-\left(T\cdot w_1+ {HR}\cdot w_2 \right)}} +\frac{w_6}{1 + e^{-\left(T\cdot w_3+ {HR}\cdot w_4\right)}} \right) } }  }  \] </p>
 			</div>
 			
-			<p>The artificial neural network looks complicated because it has so many terms. But take a closer look. The mathematical operations are simple - addition, subtraction, multiplication and exponentiation. Sure, there are a lot of steps, but each step is only a simple operation. So really, our artificial neural network is a lot of simple mathematical steps.</p>
+			<p>The artificial neural network looks complicated because it has so many terms. But take a closer look. The mathematical operations are simple - addition, subtraction, multiplication and exponentiation. In reality, our artificial neural network is a combination of many simple mathematical steps.</p>
 			<p>This is the foundation for the more advanced networks used in Alexa and other cutting edge- technologies. Pretty incredible that you could do most of Alexa's calculations on your calculator, right?</p>
 			<br>
 			
 			<h3>MAKING PREDICTIONS WITH A NEURAL NETWORK</h3>
 			<p>Right now, we could take out a calculator and start making predictions using the example neural network. All we need is our patient's temperature heart rate, and the w values. Then, we would plug those values into the equation above. And, voila! Out comes our prediction of whether our patient is sick or not. However, there's a catch. For the network to be useful, we need the predictions to be accurate. </p>
-			<p>The key to making accurate predictions is finding the best values for the w terms in the equation. You can think of these w's like settings - when we change the settings, we change the network equation. And when the network equation changes, our predictions also change, which can make them better or worse.</p>
+			<p>The key to making accurate predictions is finding the best values for the w terms in the equation. You can think of these w's like settings - when we change the settings, we change the network equation. And when the network equation changes, our predictions can get better or worse.</p>
 			<div id='ANN_Equation_ws'>
 				<p>\[ \Large{ S_{pred} = \frac{1}{1+e^{ - \left(\frac{\color{red} w_{\color{red} 5} }{1 + e^{-\left(T\cdot \color{red} w_{\color{red} 1}+ {HR}\cdot  \color{red} w_{\color{red} 2} \right)}} +\frac{\color{red} w_{\color{red} 6}}{1 + e^{-\left(T\cdot \color{red} w_{\color{red} 3}+ {HR}\cdot \color{red} w_{\color{red} 4} \right)}} \right) } }  }  \] </p>
 			</div>
-			<p>Ultimately, if we get the settings right, we can get great predictions from our neural network! That's how Alexa can recognize your voice – in her neural network she has found the right settings to make her predictions really good. But unlike our example, Alexa most likely has hundreds or thousands of w settings in total, rather than the 6 in our example (w1, w2, w3, w4, w5, w6).</p>
+			<p>Ultimately, if we get the settings right, we can get great predictions from our neural network! That's how Alexa can recognize your voice – in her neural network she has found the right settings to make her predictions really good. But unlike our example, Alexa most likely has hundreds or thousands of w settings in total, rather than just 6 (w1, w2, w3, w4, w5, and w6 in our robot example).</p>
 			<br>
 			
 			<h3>TRAINING A NEURAL NETWORK TO MAKE BETTER PREDICTIONS</h3>
-			<p>The real challenge of a neural network is to learn the w settings that make the predictions as good as possible. Unfortunately, when we are just starting out, we have no idea what the settings should be. Our best option is to initialize the network by guessing values for the settings. In this example, we will start by guessing that every setting is equal to 1 (w1 = w2 = w3 = w4 = w5 = w6 = 1).</p>
-			<p>The next step is to train the neural network to make better predictions. This training process requires some data - which we need to collect or find in a database.</p>
+			<p>The real challenge of a neural network is to learn the w settings that make the predictions as good as possible. Unfortunately, when we are just starting out, we have no idea what the settings should be. Our best option is to start by guessing values for the ws. </p>
+			<p>In this example, we will start by guessing that every setting is equal to 1 (w1 = w2 = w3 = w4 = w5 = w6 = 1).</p>
+			
 			<h4>Collecting data to train the network</h4>
-			<p>In our robot example, we will hire a doctor to get our training data. The doctor will examine 10 example patients and, for each patient, the doctor will measure the patient's heart rate (HR), temperature (T), and whether they were sick or not (S).</p>
+			<p>The training process requires some data - which we need to collect or find in a database.</p>
+			<p>In our robot example, we will hire a doctor. The doctor will examine 10 patients, measuring their heart rate (HR), temperature (T), and whether they were sick or not (S).</p>
 			<div id='DoctorDiv'>
-				<p>[Click the doctor to get data from each patient!]</p>
+				<p><strong>[Click the doctor to collect data from each patient!]</strong></p>
 				<!-- <div class='ANN_Table'></div> -->
 				<script src="./doctor.js"></script>
 			</div>
 			
 			<h4>The network's first predictions</h4>
-			<p>With our data and w values in hand, next, we go subject-by-subject and make predictions using the equation. For each subject, we plug in temperature, heart rate, and our w values into the equation, then we calculate the S value.</p> 
-			<p>Afterwards, we have to check the predictions. These first predictions will be awful, because we started off by off guessing the w values.</p>
+			<p>Training a network is a trial-and-error process. So now it's time to try and make predictions. For each subject, we will make predictions by plugging in temperature, heart rate, and our w values into the equation (at first, we guessed that all ws = 1). Then we can calculate our predictions.</p> 
 			<div id='RobotDoctorDiv'>
-			
-				<p>[Click the gears to read in patient data and predict if the patient is sick or not.]</p>
+				<p><strong>[Click the gears to read in patient data and predict if the patient is sick or not.]</strong></p>
 				<script src="./robotdoctor.js"></script>
 			</div>
 			<h4>Making better predictions</h4>
-			<p>When the network's predictions are erroneous, we change the settings to make the prediction a little bit better. We keep changing the settings until the network predicts the right answers - when this happens, the network is well-trained.</p>
+			<p>The first predictions are awful, because we started off by guessing that all ws = 1. In fact, the network predictions were almost identical for all of the patients.</p>
+			<p>Since the predictions were inaccurate, it is time for the "error" part of the trial-and-error. Our goal is to correct any errors the network made. At this stage, we update the w settings to make the errors a little bit smaller. And we repeat this process over and over.</p>
 			<p>To truly train an artificial neural network well, we change the settings many times: sometimes thousands of times, sometimes millions of times, and sometimes even more! And eventually, our network makes smaller and smaller errors as we update the settings.</p>
 			<div id='Error'>
 				<p>[Error decreasing over time]</p>
 			</div>
 
 			
+			<h3>THE CONNECTION BETWEEN ARTIFICIAL NEURAL NETWORKS AND BRAINS.</h3> 
+			<p>So, why is an artificial neural network so powerful? And why can it do things that other computer programs cannot?</p>
+			<p>The answer: The neural network equation is not just an arbitrary collection of mathematical operations. Each operation has a purpose. And when these operations are combined, the entire equation imitates the way a brain works.</p> 
+			<p>In particular, artificial neural networks imitate two features of biological brain cells:</p>
+			<p><strong>1) ANNs imitate the way brain cells communicate with other brain cells.</strong> In biological brains, brain cells receive and send electrical signals. The electrical signals are the language that brain cells use to communicate. But there's a special feature of these signals - the signals coming in are <strong>inputs</strong> to the cell and the signals being sent are <strong>outputs</strong> from the cell. </p>
+			<p>If a brain cell doesn't receive enough electrical signals coming in, it will not send any signals out. Essentially, there's a threshold effect - once the cell crosses the threshold, it will start sending electrical signals out.</p>
+			<p>The figure below shows data from real neurons - it shows that once neurons get enough signals coming in, they start sending signals of their own.</p>
 			
+			<p>Beer RD (1990) Intelligence as Adaptive Behavior: An Experiment in Computational Neuroethology. San Diego: Acadmic Press, Inc.</p>
+
+			<p><strong>2) ANNs imitate the way brain cells preferentially listen to certain other brain cells.</strong> Normally, brain cells receive electrical signal inputs from many other cells. However, not all inputs are equal; a brain cell will listen more to some cells than others. Just like people choose who to listen to, neurons listen more to some neurons than others.  For example, some input signals could be worth 3x more than others. And some input signals could be worth nothing.
+			Click the example below to see how the neural network equation imitates biological brains.</p>
+			<div id='EquationExplode'>
+				<p>[EquationExplode JS]</p>
+			</div>
+			<br>
+			<h3>ANNs</h3> 
+			<p>Artificial neural networks are powerful tools.</p>
 			
-			
-			
-		
 		</div></div>
 		<div id="NetworkGraph"></div>
 		</div>
